BUG: Resolution switching. BUG: Spinny Loader stuck (loadedmetadata fails?)

--- a/styles.css
+++ b/styles.css
@@ -270,3 +270,36 @@ video {
 .timeline-container:hover .timeline {
   height: 100%;
 }
+
+/* new adds*/
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader:after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: loader-rotate 1.2s linear infinite;
+}
+
+@keyframes loader-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
